# kafka-k3

./: CHANGELOG.txt  CMakeLists.txt  DEVEL.md  Dockerfile.app  Dockerfile.dev  Dockerfile.k3backup.rel  Dockerfile.k3replay.rel  Dockerfile.rel  Dockerfile.sasl  README.md  build.sh
cmake/: FindLibRDKafka.cmake
k3backup/: CMakeLists.txt  main.cpp
k3replay/: CMakeLists.txt  main.cpp
main/: CMakeLists.txt  main.cpp
main/k3backup/: CMakeLists.txt
src/: CMakeLists.txt  awsguard.hpp  consume.cpp  consume.hpp  k3aws.cpp  k3aws.hpp  kafkaconf.cpp  kafkaconf.hpp  memchecker.hpp  messagewrapper.cpp  messagewrapper.hpp  s3.cpp  s3.hpp  utils.hpp
src/common/: awsguard.cpp  checksum.cpp  consume.cpp  kafkaconf.cpp  memchecker.cpp  messagetime.cpp  produce.cpp  s3.cpp  utils.cpp
src/include/: checksum.hpp  consume.hpp  iosguard.hpp  messagetime.hpp  messagewrapper.hpp  produce.hpp  s3.hpp
