CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT("k3")
SET(CMAKE_MODULE_PATH
        "${PROJECT_SOURCE_DIR}/cmake"
        "${CMAKE_MODULE_PATH}"
)
OPTION(BUILD_TESTS "Build Unit Tests" OFF)
OPTION(BUILD_DEBUG "Build for debugging" OFF)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")

SET(CMAKE_MODULE_PATH 
	"${CMAKE_MODULE_PATH}"
	"/usr/local/lib64/cmake/"
	"/usr/local/lib64/cmake/AWSSDK"
)
FIND_PACKAGE(AWSSDK)
MESSAGE(STATUS "AWSSDK_LIB_DIR: ${AWSSDK_LIB_DIR}")
MESSAGE(STATUS "AWSSDK_INC_DIR: ${AWSSDK_INCLUDE_DIR}")
MESSAGE(STATUS "AWSSDK_BIN_DIR: ${AWSSDK_BIN_DIR}")

SET(SERVICE_LIST s3 s3-encryption kms)
AWSSDK_CPY_DYN_LIBS(SERVICE_LIST "" ./)
SET(SERVICE s3-encryption)
AWSSDK_LIB_DEPS(SERVICE DEPS)
MESSAGE(STATUS "${SERVICE} depends on libs: ${DEPS}")
AWSSDK_DETERMINE_LIBS_TO_LINK(SERVICE ALL_LIBS)
SET(ALL_LIBS
	"${ALL_LIBS}"
	"z"       
	"sasl2"
	"ssl"
	"ssh2"
	"curl"
	"crypt"
	"crypto"
	"stdc++"
	"jansson"
	"rdkafka"
	"rdkafka++"
	"config"
)
MESSAGE(STATUS "All linked libs: ${ALL_LIBS}")

IF(BUILD_DEBUG) 
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g3")
ENDIF(BUILD_DEBUG)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(k3backup)
ADD_SUBDIRECTORY(k3replay)
IF(BUILD_TESTS) 
	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DBUILD_TESTS" )
	ADD_SUBDIRECTORY(test)
ENDIF(BUILD_TESTS)

